--- a/.github/workflows/android-fast.yml
+++ b/.github/workflows/android-fast.yml
@@ -29,20 +29,20 @@ jobs:
       - name: Setup Haxe
         uses: krdlab/setup-haxe@master
         with:
-          haxe-version: 4.1.5
+          haxe-version: 4.2.0
       - name: Install Haxelib
         run: |
+          DEBIAN_FRONTEND=noninteractive sudo apt-get install -y -qq -o=Dpkg::Use-Pty=0 gcc-10 gcc-12-base gcc-12-doc g++-12 libstdc++-12-dev libstdc++-12-doc < /dev/null > /dev/null
           haxelib setup ~/haxelib
           haxelib install lime 7.9.0 --quiet
           haxelib git hxcpp https://github.com/mcagabe19/hxcpp-fastspeed.git
           haxelib install openfl 9.1.0 --quiet
           haxelib install actuate 1.8.9 --quiet
           haxelib --never git flixel https://github.com/mcagabe19/flixel-4.9.0.git
-          haxelib install flixel-ui 2.3.3 --quiet
+          haxelib install flixel-ui 2.4.0 --quiet
           haxelib install hscript 2.4.0 --quiet
           haxelib install flixel-addons 2.10.0 --quiet
           haxelib git faxe https://github.com/uhrobots/faxe.git
-          haxelib git polymod https://github.com/mcagabe19/polymod-for-kade1.5.git
           haxelib git extension-androidtools https://github.com/MAJigsaw77/extension-androidtools.git
           haxelib git extension-videoview https://github.com/MAJigsaw77/extension-videoview.git
           haxelib set openfl 9.1.0
@@ -58,9 +58,6 @@ jobs:
           ANDROID_NDK_HOME: ${{ steps.setup-ndk.outputs.ndk-path }}
       - name: Compile
         run: haxelib run lime build android -${{ matrix.build }} -D no-compilation -D macro-times -D analyzer-optimize -${{ matrix.arch }}
-        env:
-          cert_pass: 123456
-          cert_alias_pass: 123456
       - name: Publish Artifact
         uses: actions/upload-artifact@main
         with:
@@ -92,20 +89,20 @@ jobs:
       - name: Setup Haxe
         uses: krdlab/setup-haxe@master
         with:
-          haxe-version: 4.1.5
+          haxe-version: 4.2.0
       - name: Install Haxelib
         run: |
+          DEBIAN_FRONTEND=noninteractive sudo apt-get install -y -qq -o=Dpkg::Use-Pty=0 gcc-10 gcc-12-base gcc-12-doc g++-12 libstdc++-12-dev libstdc++-12-doc < /dev/null > /dev/null
           haxelib setup ~/haxelib
-          haxelib git lime https://github.com/mcagabe19/lime --quiet
+          haxelib install lime 7.9.0 --quiet
           haxelib git hxcpp https://github.com/mcagabe19/hxcpp-fastspeed.git
           haxelib install openfl 9.1.0 --quiet
           haxelib install actuate 1.8.9 --quiet
           haxelib --never git flixel https://github.com/mcagabe19/flixel-4.9.0.git
-          haxelib install flixel-ui 2.3.3 --quiet
+          haxelib install flixel-ui 2.4.0 --quiet
           haxelib install hscript 2.4.0 --quiet
           haxelib install flixel-addons 2.10.0 --quiet
           haxelib git faxe https://github.com/uhrobots/faxe.git
-          haxelib git polymod https://github.com/mcagabe19/polymod-for-steve.git
           haxelib git extension-androidtools https://github.com/MAJigsaw77/extension-androidtools.git
           haxelib git extension-videoview https://github.com/MAJigsaw77/extension-videoview.git
           haxelib set openfl 9.1.0
@@ -121,9 +118,6 @@ jobs:
           ANDROID_NDK_HOME: ${{ steps.setup-ndk.outputs.ndk-path }}
       - name: Compile
         run: haxelib run lime build android -${{ matrix.build }} -D no-compilation -D macro-times -D analyzer-optimize -${{ matrix.arch }}
-        env:
-          cert_pass: 123456
-          cert_alias_pass: 123456
       - name: Publish Artifact
         uses: actions/upload-artifact@main
         with:
