--- a/.github/workflows/android-fast.yml
+++ b/.github/workflows/android-fast.yml
@@ -41,7 +41,7 @@ jobs:
           haxelib install flixel-ui 2.4.0 --quiet
           haxelib install hscript 2.4.0 --quiet
           haxelib install flixel-addons 2.10.0 --quiet
-          haxelib git faxe https://github.com/uhrobots/faxe.git
+          haxelib git linc_luajit https://github.com/Sirox228/linc_luajit.git
           haxelib git extension-androidtools https://github.com/MAJigsaw77/extension-androidtools.git
           haxelib git extension-videoview https://github.com/MAJigsaw77/extension-videoview.git
           haxelib set openfl 9.1.0
@@ -100,7 +100,7 @@ jobs:
           haxelib install flixel-ui 2.4.0 --quiet
           haxelib install hscript 2.4.0 --quiet
           haxelib install flixel-addons 2.10.0 --quiet
-          haxelib git faxe https://github.com/uhrobots/faxe.git
+          haxelib git linc_luajit https://github.com/Sirox228/linc_luajit.git
           haxelib git extension-androidtools https://github.com/MAJigsaw77/extension-androidtools.git
           haxelib git extension-videoview https://github.com/MAJigsaw77/extension-videoview.git
           haxelib set openfl 9.1.0
