--- a/.github/workflows/android-fast.yml
+++ b/.github/workflows/android-fast.yml
@@ -61,7 +61,7 @@ jobs:
         uses: actions/upload-artifact@main
         with:
           name: build-ubuntu${{ matrix.version }}-${{ matrix.arch }}-${{ matrix.build }}
-          path: 'export/${{ matrix.build }}/android/bin/app/build/outputs/apk/${{ matrix.build }}/*.apk'
+          path: 'export/${{ matrix.build }}/android/bin/app/build/outputs/apk/debug/*.apk'
           if-no-files-found: error
   build-x86-and-x8664:
     name: Android
