--- a/.github/workflows/android-fast.yml
+++ b/.github/workflows/android-fast.yml
@@ -56,7 +56,7 @@ jobs:
         env:
           ANDROID_NDK_HOME: ${{ steps.setup-ndk.outputs.ndk-path }}
       - name: Compile
-        run: haxelib run lime build android -${{ matrix.build }} -D no-compilation -D macro-times -D analyzer-optimize -${{ matrix.arch }} ; tree -d
+        run: haxelib run lime build android -${{ matrix.build }} -D no-compilation -D macro-times -D analyzer-optimize -${{ matrix.arch }}
       - name: Publish Artifact
         uses: actions/upload-artifact@main
         with:
@@ -116,7 +116,7 @@ jobs:
         env:
           ANDROID_NDK_HOME: ${{ steps.setup-ndk.outputs.ndk-path }}
       - name: Compile
-        run: haxelib run lime build android -${{ matrix.build }} -D no-compilation -D macro-times -D analyzer-optimize -${{ matrix.arch }} ; tree -d
+        run: haxelib run lime build android -${{ matrix.build }} -D no-compilation -D macro-times -D analyzer-optimize -${{ matrix.arch }}
       - name: Publish Artifact
         uses: actions/upload-artifact@main
         with:
